--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "app_template",
-    "short_name": "app_template",
+    "name": "ieee_event_app",
+    "short_name": "ieee_event_app",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
